# agent-fixer-stage

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  agent_fixer.py  layer2_embeddings.py  llm_judge.py  mcp_integration.py  pyproject.toml  requirements-lock.txt  requirements.txt  scope_drift.py  sonar-project.properties  test_agent_fixer.py  test_new_features.py  test_spanish_coverage.py
.github/workflows/: tests.yml
test_data/: es_attacks.jsonl
