[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-fixer-stage"
version = "0.1.0"
description = "Lightweight output verification for multi-agent AI workflows"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Pedro Sordo Martínez", email = "amurlaniakea@gmail.com"}
]
keywords = ["ai-agents", "security", "prompt-injection", "multi-agent", "llm"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "black>=24.0", "ruff>=0.5.0"]

[tool.setuptools]
py-modules = ["agent_fixer"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
