[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-fixer-stage"
version = "0.1.0"
description = "Lightweight output verification for multi-agent AI workflows"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Pedro Sordo Martínez", email = "amurlaniakea@gmail.com"}
]
keywords = ["ai-agents", "security", "prompt-injection", "multi-agent", "llm"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "black>=24.0", "ruff>=0.5.0", "mypy>=1.10", "pytest-cov>=4.0"]

[tool.setuptools]
py-modules = ["agent_fixer", "layer2_embeddings"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["test_*.py", "venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "ANN", "SIM",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
