[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-fixer-stage"
version = "0.2.0"
description = "Lightweight output verification for multi-agent AI workflows"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
authors = [
    {name = "Pedro Sordo Martínez", email = "amurlaniakea@gmail.com"}
]
keywords = ["ai-agents", "security", "prompt-injection", "multi-agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/amurlaniakea/agent-fixer-stage"
Documentation = "https://github.com/amurlaniakea/agent-fixer-stage"
Repository = "https://github.com/amurlaniakea/agent-fixer-stage"
Issues = "https://github.com/amurlaniakea/agent-fixer-stage/issues"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=24.0", "ruff>=0.5.0", "mypy>=1.10"]
ollama = ["requests>=2.28.0"]  # Para LLM judge con Ollama

[tool.setuptools]
py-modules = ["agent_fixer", "layer2_embeddings", "scope_drift", "llm_judge", "mcp_integration"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"


[tool.coverage.run]
source = ["."]
omit = ["test_*.py", "venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "N", "ANN", "SIM",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
